--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.2",
-    "firebase": "^10.7.1"
-  },
+  "react": "^18.2.0",
+  "react-dom": "^18.2.0",
+  "react-router-dom": "^6.14.2",
+  "firebase": "^10.7.1",
+  "react-scripts": "^5.0.1"
+}
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
