--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "react-router-dom": "^6.15.0",
-    "firebase": "^10.9.0",
+    "firebase": "^10.10.0",
     "react-scripts": "^5.0.1"
   },
   "scripts": {
@@ -14,5 +14,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
