--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-router-dom": "^6.15.0",
     "firebase": "^10.10.0",
     "react-scripts": "^5.0.1"
+    "ajv": "^8.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
