--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "react-router-dom": "^6.15.0",
-    "firebase": "^10.10.0",
-    "react-scripts": "^5.0.1"
+    "firebase": "^10.11.0",
+    "react-scripts": "5.0.1",
     "ajv": "^8.12.0"
   },
   "scripts": {
