--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "conectazuero",
   "version": "1.0.0",
   "private": true,
-  "homepage": "https://conectazuero.netlify.app",
+  "homepage":"./",
   "dependencies": {
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
