--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "ajv": "^8.12.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+  "start": "react-scripts start",
+  "build": "CI=false react-scripts build",
+  "postbuild": "cp public/_redirects build/_redirects",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject"
+},
   "engines": {
     "node": "18.x"
   }
